tests/errors/range_zero_step.py
# expect_error: ValueError
print(range(1, 5, 0))